--- a/packages/snappy-site/styles.css
+++ b/packages/snappy-site/styles.css
@@ -1,7 +1,6 @@
-@import "@fontsource-variable/inter";
-
-@import "./src/css/variables.css";
-@import "./src/css/base.css";
-@import "./src/css/layout.css";
-@import "./src/css/components.css";
-@import "./src/css/responsive.css";
+@import url("@fontsource-variable/inter");
+@import url("./src/css/variables.css");
+@import url("./src/css/base.css");
+@import url("./src/css/layout.css");
+@import url("./src/css/components.css");
+@import url("./src/css/responsive.css");
