--- a/packages/snappy-site/src/app/index.html
+++ b/packages/snappy-site/src/app/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Snappy</title>
     <base href="/app/" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
     <div id="app-root"></div>
