--- a/packages/snappy-site/src/app/index.html
+++ b/packages/snappy-site/src/app/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
+    <div id="fog-bg" aria-hidden="true"></div>
     <div id="app-root"></div>
     <script type="module" src="/src/app/Main.tsx"></script>
   </body>
