--- a/packages/snappy-site/src/app/index.html
+++ b/packages/snappy-site/src/app/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="fog-bg" aria-hidden="true"></div>
     <div id="app-root"></div>
-    <script type="module" src="/src/app/Main.tsx"></script>
+    <script type="module" src="./Main.tsx"></script>
   </body>
 </html>
