--- a/packages/snappy-site/src/app/styles.css
+++ b/packages/snappy-site/src/app/styles.css
@@ -1,3 +1,12 @@
 @import url("@fontsource-variable/inter");
 @import url("../css/variables.css");
 @import url("../css/base.css");
+
+/* View Transition API: cross-fade between routes */
+@supports (view-transition-name: none) {
+  ::view-transition-old(root),
+  ::view-transition-new(root) {
+    animation-duration: 0.2s;
+    animation-timing-function: ease-out;
+  }
+}
