--- a/packages/snappy-site/src/shared/Header.module.css
+++ b/packages/snappy-site/src/shared/Header.module.css
@@ -33,6 +33,12 @@
   opacity: 0.9;
 }
 
+.logo:focus-visible {
+  outline: 2px solid var(--color-focus-ring);
+  outline-offset: 2px;
+  border-radius: 4px;
+}
+
 .logoIcon {
   width: 1.25em;
   height: 1.25em;
