--- a/packages/snappy-site/src/site/styles.css
+++ b/packages/snappy-site/src/site/styles.css
@@ -1,3 +1,1 @@
-@import url("@fontsource-variable/inter");
-@import url("../css/variables.css");
-@import url("../css/base.css");
+@import url("@snappy/ui/styles");
