--- a/packages/ui/src/components/Button.module.css
+++ b/packages/ui/src/components/Button.module.css
@@ -42,3 +42,11 @@
   opacity: 0.6;
   transform: none;
 }
+
+.icon {
+  width: 1.25em;
+  min-width: 1.25em;
+  height: 1.25em;
+  min-height: 1.25em;
+  margin-inline-end: var(--space-2);
+}
