--- a/packages/snappy-site/src/app/index.html
+++ b/packages/snappy-site/src/app/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="app-root"></div>
-    <script type="module" src="./Main.tsx"></script>
+    <script type="module" src="/app/Main.tsx"></script>
   </body>
 </html>
