--- a/packages/ui/src/components/Block.module.css
+++ b/packages/ui/src/components/Block.module.css
@@ -1,5 +1,5 @@
 .title {
-  margin: 0 0 var(--space-2);
+  margin: 0;
   font-size: var(--text-lg);
   font-weight: var(--weight-bold);
   color: var(--color-text-heading);
