--- a/packages/ui/src/components/Field.module.css
+++ b/packages/ui/src/components/Field.module.css
@@ -18,8 +18,7 @@
 
 .input-wrap {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  flex-flow: row nowrap;
   align-items: stretch;
 }
 
@@ -46,8 +45,8 @@
 
 .input-inside-wrap {
   flex: 1 1 0;
-  min-width: 0;
   width: 0;
+  min-width: 0;
   background: transparent;
   border: none;
 }
